Bug 461590 - Resizing Windows on the desktop doesnt Resize the size on the canvas in OBS (Wayland)
Summary: Resizing Windows on the desktop doesnt Resize the size on the canvas in OBS (...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.26.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-08 13:38 UTC by McCak
Modified: 2022-11-30 15:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description McCak 2022-11-08 13:38:45 UTC
SUMMARY
Resizing Windows on the desktop doesnt Resize the size on the canvas in OBS (Wayland)

STEPS TO REPRODUCE
1. Open OBS
2. Try add window
3. Resize the window (Outside the canvas)

OBSERVED RESULT
It doesnt resize the window on the canvas however it just gonna stretch itself on the canvas maintaining the same size

EXPECTED RESULT
The window on the canvas will resize itself when the window on the desktop is resizing.

SOFTWARE/OS VERSIONS
Linux: Arch
KDE Plasma Version: 5.26.2
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION
on KDE X11 is fine.. only KDE Wayland suffer from this issue..
Comment 1 Aeon 2022-11-08 13:52:06 UTC
SUMMARY:
I also observe this Bug on my System with OBS(Flatpak) on Wayland.



System information:
[a@b ~]$ inxi -Fa
perl: warning: Setting locale failed.
perl: warning: Please check that your locale settings:
        LANGUAGE = "",
        LC_ALL = (unset),
        LC_ADDRESS = "de_DE.UTF-8",
        LC_NAME = "de_DE.UTF-8",
        LC_MONETARY = "de_DE.UTF-8",
        LC_PAPER = "de_DE.UTF-8",
        LC_IDENTIFICATION = "de_DE.UTF-8",
        LC_TELEPHONE = "de_DE.UTF-8",
        LC_MEASUREMENT = "de_DE.UTF-8",
        LC_TIME = "en_DE.UTF-8",
        LC_NUMERIC = "de_DE.UTF-8",
        LANG = "en_GB.UTF-8"
    are supported and installed on your system.
perl: warning: Falling back to a fallback locale ("en_GB.UTF-8").
System:
  Host: b Kernel: 5.18.16-1-MANJARO arch: x86_64 bits: 64 compiler: gcc
    v: 12.1.1 parameters: BOOT_IMAGE=/boot/vmlinuz-5.18-x86_64
    root=UUID=56b17ecb-f85b-4731-8854-f5a12b04d11f rw quiet apparmor=1
    security=apparmor udev.log_priority=3
  Desktop: KDE Plasma v: 5.25.5 tk: Qt v: 5.15.6 wm: kwin_wayland vt: 2
    dm: SDDM Distro: Manjaro Linux base: Arch Linux
Machine:
  Type: Desktop Mobo: ASUSTeK model: PRIME X570-P v: Rev X.0x
    serial: <superuser required> UEFI: American Megatrends v: 1201
    date: 09/09/2019
CPU:
  Info: model: AMD Ryzen 5 3600X bits: 64 type: MT MCP arch: Zen 2 gen: 3
    level: v3 note: check built: 2020-22 process: TSMC n7 (7nm)
    family: 0x17 (23) model-id: 0x71 (113) stepping: 0 microcode: 0x8701013
  Topology: cpus: 1x cores: 6 tpc: 2 threads: 12 smt: enabled cache:
    L1: 384 KiB desc: d-6x32 KiB; i-6x32 KiB L2: 3 MiB desc: 6x512 KiB
    L3: 32 MiB desc: 2x16 MiB
  Speed (MHz): avg: 2298 high: 3062 min/max: 2200/4409 boost: enabled
    scaling: driver: acpi-cpufreq governor: schedutil cores: 1: 2381 2: 2051
    3: 2144 4: 2196 5: 2195 6: 2196 7: 3062 8: 2111 9: 2063 10: 2794 11: 2196
    12: 2196 bogomips: 91069
  Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
  Vulnerabilities:
  Type: itlb_multihit status: Not affected
  Type: l1tf status: Not affected
  Type: mds status: Not affected
  Type: meltdown status: Not affected
  Type: mmio_stale_data status: Not affected
  Type: retbleed mitigation: untrained return thunk; SMT enabled with STIBP
    protection
  Type: spec_store_bypass mitigation: Speculative Store Bypass disabled via
    prctl
  Type: spectre_v1 mitigation: usercopy/swapgs barriers and __user pointer
    sanitization
  Type: spectre_v2 mitigation: Retpolines, IBPB: conditional, STIBP:
    always-on, RSB filling
  Type: srbds status: Not affected
  Type: tsx_async_abort status: Not affected
Graphics:
  Device-1: AMD Navi 10 [Radeon RX 5600 OEM/5600 XT / 5700/5700 XT]
    vendor: XFX Pine driver: amdgpu v: kernel arch: RDNA-1 code: Navi
    process: TSMC n7 (7nm) built: 2019-20 pcie: gen: 4 speed: 16 GT/s
    lanes: 16 ports: active: DP-1,DP-2,DP-3 empty: HDMI-A-1 bus-ID: 0a:00.0
    chip-ID: 1002:731f class-ID: 0300
  Display: wayland server: X.org v: 1.21.1.4 with: Xwayland v: 22.1.3
    compositor: kwin_wayland driver: X: loaded: amdgpu
    unloaded: modesetting,radeon alternate: fbdev,vesa dri: radeonsi
    gpu: amdgpu d-rect: 6400x2640 display-ID: 0
  Monitor-1: DP-1 pos: bottom-l res: 1920x1200 size: N/A modes: N/A
  Monitor-2: DP-2 pos: top-center res: 2560x1440 size: N/A modes: N/A
  Monitor-3: DP-3 pos: bottom-r res: 1920x1200 size: N/A modes: N/A
  OpenGL: renderer: AMD Radeon RX 5700 XT (navi10 LLVM 14.0.6 DRM 3.46
    5.18.16-1-MANJARO) v: 4.6 Mesa 22.1.7 direct render: Yes
Audio:
  Device-1: AMD Navi 10 HDMI Audio driver: snd_hda_intel v: kernel
    bus-ID: 3-4:2 pcie: chip-ID: 1397:0508 gen: 4 class-ID: fe01 speed: 16 GT/s
    lanes: 16 bus-ID: 0a:00.1 chip-ID: 1002:ab38 class-ID: 0403
  Device-2: AMD Starship/Matisse HD Audio vendor: ASUSTeK
    driver: snd_hda_intel v: kernel pcie: gen: 4 speed: 16 GT/s lanes: 16
    bus-ID: 0c:00.4 chip-ID: 1022:1487 class-ID: 0403
  Device-3: BEHRINGER GmbH UMC204HD 192k type: USB driver: snd-usb-audio
  Sound API: ALSA v: k5.18.16-1-MANJARO running: yes
  Sound Server-1: JACK v: 1.9.21 running: no
  Sound Server-2: PulseAudio v: 16.1 running: yes
  Sound Server-3: PipeWire v: 0.3.58 running: yes
Network:
  Device-1: Realtek RTL8111/8168/8411 PCI Express Gigabit Ethernet
    vendor: ASUSTeK PRIME B450M-A driver: r8169 v: kernel pcie: gen: 1
    speed: 2.5 GT/s lanes: 1 port: f000 bus-ID: 04:00.0 chip-ID: 10ec:8168
    class-ID: 0200
  IF: enp4s0 state: up speed: 100 Mbps duplex: full mac: a8:5e:45:56:44:73
Drives:
  Local Storage: total: 1.14 TiB used: 620.55 GiB (53.3%)
  SMART Message: Unable to run smartctl. Root privileges required.
  ID-1: /dev/nvme0n1 maj-min: 259:0 vendor: Samsung model: SSD 970 EVO Plus
    250GB size: 232.89 GiB block-size: physical: 512 B logical: 512 B
    speed: 31.6 Gb/s lanes: 4 type: SSD serial: S4EUNJ0N100836W rev: 2B2QEXM7
    temp: 46.9 C scheme: GPT
  ID-2: /dev/sda maj-min: 8:0 vendor: Samsung model: SSD 860 QVO 1TB
    size: 931.51 GiB block-size: physical: 512 B logical: 512 B speed: 6.0 Gb/s
    type: SSD serial: S4CZNF0N339055Y rev: 2B6Q scheme: GPT
Partition:
  ID-1: / raw-size: 232.59 GiB size: 227.88 GiB (97.98%) used: 125.53 GiB
    (55.1%) fs: ext4 dev: /dev/nvme0n1p2 maj-min: 259:2
  ID-2: /boot/efi raw-size: 300 MiB size: 299.4 MiB (99.80%) used: 280 KiB
    (0.1%) fs: vfat dev: /dev/nvme0n1p1 maj-min: 259:1
Swap:
  Kernel: swappiness: 60 (default) cache-pressure: 100 (default)
  ID-1: swap-1 type: file size: 8 GiB used: 0 KiB (0.0%) priority: -2
    file: /swapfile
Sensors:
  System Temperatures: cpu: 35.5 C mobo: 37.0 C gpu: amdgpu temp: 58.0 C
    mem: 58.0 C
  Fan Speeds (RPM): fan-1: 0 fan-2: 646 fan-3: 0 fan-4: 0 fan-5: 3061
    fan-6: 0 fan-7: 0 gpu: amdgpu fan: 0
Info:
  Processes: 342 Uptime: 2h 0m wakeups: 0 Memory: 31.26 GiB used: 6.2 GiB
  (19.8%) Init: systemd v: 251 default: graphical tool: systemctl
  Compilers: gcc: 12.2.0 clang: 14.0.6 Packages: 1822 pm: pacman pkgs: 1765
  libs: 481 tools: pamac,yay pm: flatpak pkgs: 57 Shell: Bash v: 5.1.16
  running-in: konsole inxi: 3.3.22
Comment 2 Nate Graham 2022-11-08 16:32:46 UTC
Doubtful this is an xdg-desktop-portal-kde issue. We have a similar report in Bug 461247 too.
Comment 3 McCak 2022-11-08 22:13:30 UTC
(In reply to Nate Graham from comment #2)
> Doubtful this is an xdg-desktop-portal-kde issue. We have a similar report
> in Bug 461247 too.

Maybe yeah.. I thought xdg-desktop-portal-kde was responsible in this case.. however in that bug is kinda different than this one imo because in this case X11 works perfectly fine (even with compositor on).. not to mention other DE like GNOME Wayland is perfectly fine.. if need more details.. just reply me
Comment 4 Aleix Pol 2022-11-09 13:26:56 UTC
This is a problem with our implementation. Either here or possibly in KWin.

This is also a problem with firefox/chromium window sharing.

Marking as confirmed because it needs attention in a way or another, it's just not clear to me what's the right way to fix it.
Comment 5 Nate Graham 2022-11-09 16:01:39 UTC
Did you move OBS's window to a different virtual desktop? If so, it could be Bug 456280.
Comment 6 Aeon 2022-11-09 20:17:48 UTC
(In reply to Nate Graham from comment #5)
> Did you move OBS's window to a different virtual desktop? If so, it could be
> Bug 456280.

When I checked the resizing bug on my machine I did the test on the same virtual Desktop. I have a 3 monitor Setup and i only use one Virtual Desktop. I have a 2nd one enabled but don't use it. For my System details see my earlier post.
Comment 7 McCak 2022-11-10 00:34:10 UTC
(In reply to Nate Graham from comment #5)
> Did you move OBS's window to a different virtual desktop? If so, it could be
> Bug 456280.

Nope.. its on the same desktop..
Comment 8 Bug Janitor Service 2022-11-14 13:34:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3190
Comment 9 Vlad Zahorodnii 2022-11-14 15:12:45 UTC
Git commit ecbe29640c075c17f680688d42b19c61712385ba by Vlad Zahorodnii, on behalf of Aleix Pol.
Committed on 14/11/2022 at 13:40.
Pushed by vladz into branch 'master'.

screencast: Fix how we tell pipewire that the stream has been resized

We need to send sizes in a format that param buffers understand.
This fixes some glitches we'd see when sharing a window and resizing it.

Thanks Jan Grulich for pointing me in the right direction!

M  +1    -3    src/plugins/screencast/screencaststream.cpp

https://invent.kde.org/plasma/kwin/commit/ecbe29640c075c17f680688d42b19c61712385ba
Comment 10 Vlad Zahorodnii 2022-11-14 15:36:14 UTC
Git commit 19e7ed61e038744277284197fae05032703cb40d by Vlad Zahorodnii, on behalf of Aleix Pol.
Committed on 14/11/2022 at 15:36.
Pushed by vladz into branch 'Plasma/5.26'.

screencast: Fix how we tell pipewire that the stream has been resized

We need to send sizes in a format that param buffers understand.
This fixes some glitches we'd see when sharing a window and resizing it.

Thanks Jan Grulich for pointing me in the right direction!


(cherry picked from commit ecbe29640c075c17f680688d42b19c61712385ba)

M  +1    -3    src/plugins/screencast/screencaststream.cpp

https://invent.kde.org/plasma/kwin/commit/19e7ed61e038744277284197fae05032703cb40d
Comment 11 McCak 2022-11-30 01:49:34 UTC
Explanation why this is opened again.. The bug isnt got fixed with 5.26.4 update.. maybe with little video i can show what is exactly the problem is

KDE Wayland OBS Example  https://youtu.be/KditmAFcLj0
GNOME Wayland OBS Example https://youtu.be/L0cHQ5dukaY (Same behavior can be replicated on KDE X11)
Comment 12 Aleix Pol 2022-11-30 02:01:47 UTC
This looks to me like OBS needs to react to the buffer changing size.

We implement it different to how GNOME does it so it might need addressing in OBS.
Comment 13 McCak 2022-11-30 03:34:33 UTC
(In reply to Aleix Pol from comment #12)
> This looks to me like OBS needs to react to the buffer changing size.
> 
> We implement it different to how GNOME does it so it might need addressing
> in OBS.

Alright.. i will try to report a bug in OBS and see their response..
Comment 14 McCak 2022-11-30 09:12:57 UTC
Already reported in OBS Github Issues.. maybe we can follow it there?

https://github.com/obsproject/obs-studio/issues/7875
Comment 15 Aleix Pol 2022-11-30 15:01:01 UTC
Yes, I subscribed to the issue and will be following closely.