screencast: Fix how we tell pipewire that the stream has been resized

We need to send sizes in a format that param buffers understand.
This fixes some glitches we'd see when sharing a window and resizing it.

Thanks Jan Grulich for pointing me in the right direction!

BUG: 461590


(cherry picked from commit ecbe29640c075c17f680688d42b19c61712385ba)